code/addons/nsharp/api/game.h

//------------------------------------------------------------------------------
/**
*/
NEBULA_EXPORT bool EntityIsValid(uint64_t entity);
//------------------------------------------------------------------------------
/**
*/
NEBULA_EXPORT uint64_t EntityCreate(uint32_t worldId);
//------------------------------------------------------------------------------
/**
*/
NEBULA_EXPORT void EntityDelete(uint64_t entity);
//------------------------------------------------------------------------------
/**
*/
NEBULA_EXPORT bool EntityHasComponent(uint64_t entity, uint32_t componentId);
//------------------------------------------------------------------------------
/**
*/
NEBULA_EXPORT Math::float4 EntityGetPosition(uint64_t entity);
//------------------------------------------------------------------------------
/**
*/
NEBULA_EXPORT void EntitySetPosition(uint64_t entity, Math::vec3 pos);
//------------------------------------------------------------------------------
/**
*/
NEBULA_EXPORT Math::float4 EntityGetOrientation(uint64_t entity);
//------------------------------------------------------------------------------
/**
*/
NEBULA_EXPORT void EntitySetOrientation(uint64_t entity, Math::quat orientation);
//------------------------------------------------------------------------------
/**
*/
NEBULA_EXPORT Math::float4 EntityGetScale(uint64_t entity);
//------------------------------------------------------------------------------
/**
*/
NEBULA_EXPORT void EntitySetScale(uint64_t entity, Math::vec3 scale);
//------------------------------------------------------------------------------
/**
*/
NEBULA_EXPORT uint32_t ComponentGetIdUtf8(const char* name, uint32_t length);
//------------------------------------------------------------------------------
/**
*/
NEBULA_EXPORT void ComponentGetData(uint64_t entity, uint32_t componentId, void* outData, int dataSize);
//------------------------------------------------------------------------------
/**
*/
NEBULA_EXPORT void ComponentSetData(uint64_t entity, uint32_t componentId, void* data, int dataSize);
//------------------------------------------------------------------------------
/**
*/
NEBULA_EXPORT uint32_t WorldGetDefaultWorldId();